@@ -80,7 +80,7 @@ dnl
 dnl Process options supplied to the configure script
 dnl
 AC_ARG_ENABLE(gui,
-[  --enable-gui		      Enable gui [[default=yes]]],
+[  --enable-gui		  Enable gui [[default=yes]]],
 [if test "$enableval" = "yes"
 then
   build_gui=yes
@@ -98,14 +98,14 @@ else
 fi])
 
 AC_ARG_ENABLE(quiet-build,
-[  --enable-quiet-build     Enable quiet building],
+[  --enable-quiet-build    Enable quiet building],
 [if test "$enableval" = "yes"
 then
   quiet_build=yes
 fi])
 
 AC_ARG_ENABLE(gnuplot-checks,
-[  --disable-gnuplot-checks     do not run checks for gnuplot],
+[  --disable-gnuplot-checks do not run checks for gnuplot],
 [if test "$enableval" = "yes"
 then
   check_gnuplot=yes
@@ -435,30 +435,37 @@ dnl user has said not to
 dnl
 if test "$check_gnuplot" = "no" ; then
   have_gnuplot=yes
-  gnuplot_png=yes
-  AC_DEFINE(HAVE_GNUPLOT)
-  AC_DEFINE(GNUPLOT_PNG)
 else
   AC_DEFUN([AC_PROG_GNUPLOT],
   [AC_CHECK_PROG(GNUPLOT,gnuplot,yes)])
 
   AC_PROG_GNUPLOT
-  test x"${GNUPLOT}" = xyes && AC_DEFINE(HAVE_GNUPLOT) 
   if test x"${GNUPLOT}" = xyes ; then
     have_gnuplot=yes
   fi
 
-  gnuplot_png=no
   if test "$build_gui" = "yes" ; then
-    AC_MSG_CHECKING(for PNG support in gnuplot)
-    echo "set term png" | GNUTERM=dumb `which gnuplot` 2>/dev/null && gnuplot_png=yes
-    if test "$gnuplot_png" = yes ; then
-      AC_MSG_RESULT(yes)
-      AC_DEFINE(GNUPLOT_PNG)
-    else
+    have_gnuplot=no
+    AC_MSG_CHECKING(for gnuplot >= 4.2.0 with PNG support)
+    echo "set term png" | GNUTERM=dumb gnuplot 2>/dev/null && have_gnuplot=yes
+    if test "$have_gnuplot" = yes ; then
+      GPVERSION=`gnuplot --version | awk '{print $2}'`
+      if test "x$GPVERSION" = x ; then
+        have_gnuplot=no
+      else
+        GPMAJOR=`echo $GPVERSION | cut -c1 2>/dev/null`
+        GPMINOR=`echo $GPVERSION | cut -c3 2>/dev/null`
+        if test $GPMAJOR -eq 4 && test $GPMINOR -gt 1 ; then
+          AC_MSG_RESULT(yes)
+        else
+          have_gnuplot=no
+        fi
+      fi
+    fi
+    if test "$have_gnuplot" = no ; then
       AC_MSG_RESULT(no)
       echo
-      echo "* gretl needs PNG support in gnuplot."
+      echo "* gretl needs gnuplot >= 4.2.0, with PNG support."
       echo "* The current version of gnuplot is available from www.gnuplot.info"
       exit
     fi
@@ -751,7 +758,6 @@ Configuration:
   Installation path:                      ${prefix}
   Use readline library:                   ${have_readline}
   Use gnuplot for graphs:                 ${have_gnuplot}
-  Use PNG for gnuplot graphs:             ${gnuplot_png}
   Use LaTeX for typesetting output:       ${have_latex}
   Gnu Multiple Precision support:         ${have_gmp}
   MPFR support:                           ${have_mpfr}
